--- a/src/style/index.less
+++ b/src/style/index.less
@@ -4,3 +4,24 @@ div,ul,li,p{
 html,body{
   font-size: 16px;
 }
+
+
+//表格样式
+.main_right .content > div{
+  padding: 5px!important;
+}
+.ant-table-pagination.ant-pagination{
+  margin:5px!important;
+  margin-bottom:0px!important;
+}
+//搜索样式
+.search{
+  position: relative;
+  margin:5px auto 10px;
+  width:100%;
+  display: flex;
+  align-items: center;
+}
+.input{
+  width:200px!important;
+}
