--- a/src/views/layout/style.less
+++ b/src/views/layout/style.less
@@ -12,6 +12,8 @@
   height:60px;
   line-height: 60px;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
   >img{
     width:60px;
     height:60px;
@@ -19,8 +21,9 @@
   }
   >span{
     color: #fff;
-    font-size: 20px;
+    font-size: 15px;
     vertical-align: middle;
+    // display: none;
   }
 }
 @keyframes sidebar-logo-spin {
@@ -44,25 +47,66 @@
   .header{
     background: #fff!important;
     border-bottom:1px solid #e6e6e6;
-    height:50px;
+    height:40px;
   }
   .main_box{
     width:100%;
-    height:calc(100vh - 50px);
-    overflow-x: hidden;
-    overflow-y: scroll;
+    height:calc(100vh - 40px);
     position: relative;
-  }
-  .content{
-    margin: 0 0 0 16px;
-    background-color: #fff;
-    min-height:calc(100vh - 166px);
-    >div{
-      padding:20px;
+    >.content{
+      width:100%;
+      height:100%;
+      overflow: auto;
+      position: relative;
+      margin:0;
+      padding:0;
+      background-color: #fff;
     }
   }
 }
 
 .menu_item{
   padding-left: 48px!important;
+}
+
+// 左侧菜单父级宽度
+.ant-layout-sider,.ant-layout-sider-collapsed,.ant-layout-sider-trigger{
+  width: 15%!important;
+  max-width: 15%!important;
+  min-width: 15%!important;
+}
+.ant-layout-sider{
+  flex: 1 !important;
+  max-height: 100vh;
+  position: relative;
+  padding:0;
+}
+.ant-layout-sider-children{
+  width:100%;
+  position: relative;
+  overflow: auto;
+  overflow-x: hidden;
+  max-height: 100%;
+  &::-webkit-scrollbar {
+    /*滚动条整体样式*/
+    width: 8px; /*高宽分别对应横竖滚动条的尺寸*/
+    height: 1px;
+    position: absolute;
+    right:0px;
+  }
+  &::-webkit-scrollbar-thumb {
+    /*滚动条里面小方块*/
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.1);
+  }
+  &::-webkit-scrollbar-track {
+    /*滚动条里面轨道*/
+    // box-shadow   : inset 0 0 3px rgba(0, 0, 0, 0.2);
+    border-radius: 10px!important;
+    background: #001529;
+  }
+  
+}
+.ant-layout-sider-trigger{
+  display: none;
 }
